--- a/lazylaundry/templates/accounts/signup.html
+++ b/lazylaundry/templates/accounts/signup.html
@@ -1,4 +1,4 @@
-
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -37,24 +37,36 @@
                                                     <span><img src="{% static 'app/images/logo-dark.png' %}" alt="" height="26"></span>
                                                 </a>
                                             </div>
-                                            <form action="mt-3" class="p-2">
+                                            <form class="p-2" method="post">
+                                                {% csrf_token %}
                                                 <div class="form-group">
-                                                    <label for="username">Name</label>
-                                                    <input class="form-control" type="text" id="username" required="" placeholder="Michael Zenaty">
+                                                    <label for="username">First Name</label>
+                                                    <input class="form-control" type="text" name="first_name" id="username" required="" placeholder="Khalid">
                                                 </div>
                                                 <div class="form-group">
                                                     <label for="emailaddress">Email address</label>
-                                                    <input class="form-control" type="email" id="emailaddress" required="" placeholder="john@deo.com">
+                                                    <input class="form-control" type="email" name="email_address" id="emailaddress" required="" placeholder="Khalid@gmail.com">
                                                 </div>
                                                 <div class="form-group">
                                                     <label for="password">Password</label>
-                                                    <input class="form-control" type="password" required="" id="password" placeholder="Enter your password">
+                                                    <input class="form-control" type="password" name="password" required="" id="password" placeholder="Enter your password">
+                                                </div>
+                                                <div class="form-group">
+                                                    <label for="password">Confirm Password</label>
+                                                    <input class="form-control" type="password" name="confirm_password" required="" id="password" placeholder="confrim your password">
                                                 </div>
                                                 <div class="form-group mb-4 pb-3">
                                                     <div class="custom-control custom-checkbox checkbox-primary">
                                                         <input type="checkbox" class="custom-control-input" id="checkbox-signin">
                                                         <label class="custom-control-label" for="checkbox-signin">I accept <a href="#">Terms and Conditions</a></label>
                                                     </div>
+                                                </div>
+                                                <div>
+                                                    {% if messages %}
+                                                    {% for m in messages %}
+                                                    <p>{{m}}</p>
+                                                    {% endfor %}
+                                                    {% endif %}
                                                 </div>
                                                 <div class="mb-3 text-center">
                                                     <button class="btn btn-primary btn-block" type="submit"> Sign Up Free </button>
