--- a/lazylaundry/templates/app/main.html
+++ b/lazylaundry/templates/app/main.html
@@ -227,7 +227,7 @@
                                 <span>Lock Account</span>
                             </a>
                             <a class="dropdown-item d-flex align-items-center justify-content-between"
-                                href="javascript:void(0)">
+                                href="{% url 'logout_user' %}">
                                 <span>Log Out</span>
                             </a>
                         </div>
