user-profile edit functionality done without profile image as we will be using aws for it

--- a/lazylaundry/templates/app/main.html
+++ b/lazylaundry/templates/app/main.html
@@ -13,6 +13,8 @@
     <!-- App favicon -->
     <link rel="shortcut icon" href="{% static 'app/images/favicon.ico' %}">
 
+    <link href="{% static 'app//plugins/sweetalert2/sweetalert2.min.css' %}" rel="stylesheet" type="text/css" />
+
     <!-- App css -->
     <link href="{% static 'app/css/bootstrap.min.css' %}" rel="stylesheet" type="text/css" />
     <link href="{% static 'app/css/icons.min.css' %}" rel="stylesheet" type="text/css" />
@@ -399,7 +401,11 @@
 
     <!-- Morris Custom Js-->
     <script src="{% static 'app/pages/dashboard-demo.js' %}"></script>
+     <!-- Sweet Alerts Js-->
+     <script src="{% static 'app/plugins/sweetalert2/sweetalert2.min.js' %}"></script>
 
+     <!-- Sweet Alerts Js-->
+     <script src="{% static 'app/pages/sweet-alert-demo.js' %}"></script>
     <!-- App js -->
     <script src="{% static 'app/js/theme.js' %}"></script>
 
