--- a/lazylaundry/templates/accounts/user-profile.html
+++ b/lazylaundry/templates/accounts/user-profile.html
@@ -8,49 +8,121 @@
             <div class="card">
                 <div class="card-body">
                     <div class="d-flex flex-column align-items-center text-center">
-                        <img src="https://bootdey.com/img/Content/avatar/avatar6.png" alt="Admin" class="rounded-circle p-1 bg-primary" width="110">
+                        <img src="{% static 'app/media/profile/khalid.png' %}" alt="Admin" class="rounded-circle p-1 bg-primary" width="110">
                         <div class="mt-3">
-                            <h4>John Doe</h4>
-                            <p class="text-secondary mb-1">Full Stack Developer</p>
-                            <p class="text-muted font-size-sm">Bay Area, San Francisco, CA</p>
-                            <button class="btn btn-primary">Follow</button>
-                            <button class="btn btn-outline-primary">Message</button>
+                            <h4>{{user.first_name | title}}  {% if user.last_nam %} {{user.last_name | title}} {% endif %}</h4>
+                            <p class="text-secondary mb-1">Username : @{{user.username}}</p>
+                            <button type="button" class="btn btn-primary waves-effect waves-light" data-toggle="modal" data-target="#editProfileModal">Edit Profile</button>
+                            <button class="btn btn-outline-primary">Change Password</button>
                         </div>
                     </div>
                     <hr class="my-4">
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
-                            <h6 class="mb-0">Website</h6>
-                            <span class="text-secondary">https://bootdey.com</span>
+                            <h6 class="mb-0">Address</h6>
+                            <span class="text-secondary">{% if user.address %} {{user.address}} {% else %} eg: swat, pakistan{% endif %}</span>
                         </li>
                         <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
-                            <h6 class="mb-0">Github</h6>
-                            <span class="text-secondary">bootdey</span>
+                            <h6 class="mb-0">Phone Number</h6>
+                            <span class="text-secondary">{% if user.phone_number %} {{user.phone_number}} {% else %} 03xxxxx {% endif %}</span>
                         </li>
                         <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
-                            <h6 class="mb-0">Twitter</h6>
-                            <span class="text-secondary">@bootdey</span>
-                        </li>
-                        <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
-                            <h6 class="mb-0">Instagram</h6>
-                            <span class="text-secondary">bootdey</span>
-                        </li>
-                        <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
-                            <h6 class="mb-0">Facebook</h6>
-                            <span class="text-secondary">bootdey</span>
+                            <h6 class="mb-0">Email Address</h6>
+                            <span class="text-secondary">{{user.email}}</span>
                         </li>
                         <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
                             <h6 class="mb-0">Last Login</h6>
-                            <span class="text-secondary">January 30, 2024</span>
+                            <span class="text-secondary">{{user.last_login}}</span>
                         </li>
                         <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
                             <h6 class="mb-0">Date Joined</h6>
-                            <span class="text-secondary">June 15, 2022</span>
+                            <span class="text-secondary">{{user.date_joined}}</span>
                         </li>
                     </ul>
+                    <div class="mt-2">
+                        {% if messages %}
+                        {% for m in messages %}
+                        <p>{{m}}</p>
+                        {% endfor %}
+                        {% endif %}
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
+
+<!-- Edit profile modal -->
+<div class="modal fade" id="editProfileModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalCenterTitle">Edit Profile</h5>
+                <button type="button" class="close waves-effect waves-light" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <form method="post" enctype="multipart/form-data">
+                {% csrf_token %}
+                <div class="modal-body">
+                    <div class="text-center">
+                        <label for="profile_picture">
+                            <img id="preview_image" src="{% static 'app/media/profile/khalid.png' %}" alt="Admin" class="rounded-circle p-1 bg-primary" width="80">
+                            <p class="mt-2">Click to Change Profile</p>
+                        </label>
+                        <input type="file" class="form-control-file" name="profile_image" id="profile_picture" style="display:none;" onchange="previewImage(this);">
+                    </div>
+                    <div class="row mt-2">
+                        <div class="col">
+                            <label for="first_name">First Name</label>
+                            <input type="text" class="form-control" name="first_name" id="first_name" value="{{user.first_name}}" placeholder="khalid" required>
+                        </div>
+                        <div class="col">
+                            <label for="last_name">Last Name</label>
+                            <input type="text" class="form-control" name="last_name" id="last_name" {% if user.last_name %} value="{{user.last_name}}" {% else %} value=""{% endif %} placeholder="Last name ..." required>
+                        </div>
+                    </div>
+                    <div class="mt-2">
+                        <label for="username">Username</label>
+                        <input type="text" class="form-control" name="username" id="username" value="{{user.username}}" placeholder="kahlidxpro" required>
+                    </div>
+                    <div class="mt-2">
+                        <label for="phone_number">Phone Number</label>
+                        <input type="number" class="form-control" name="phone_number" id="phone_number" {% if user.phone_number %} value="{{user.phone_number}}" {% else %} value="03xxxxxxxxx" {% endif %} placeholder="034757xxxxx" required>
+                    </div>
+                    <div class="mt-2">
+                        <label for="address">Address</label>
+                        <input type="text" class="form-control" name="address" id="address" value="{{user.address}}" placeholder="swat, pakistan" required>
+                    </div>
+                    <div class="mt-2">
+                        <label for="email_address">Email Address</label>
+                        <input type="email" class="form-control" name="email_address" id="email_address" value="{{user.email}}" placeholder="khalid@email.com" required>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary waves-effect waves-light" data-dismiss="modal">Close</button>
+                    <button type="submit" class="btn btn-primary waves-effect waves-light">Save changes</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
+<script>
+    function previewImage(input) {
+        var preview = document.getElementById('preview_image');
+        var file = input.files[0];
+        var reader = new FileReader();
+
+        reader.onloadend = function () {
+            preview.src = reader.result;
+        };
+
+        if (file) {
+            reader.readAsDataURL(file);
+        } else {
+            preview.src = "{% static 'app/media/profile/khalid.png' %}"; // Default image if no file selected
+        }
+    }
+</script>
 {% endblock content %}
