profile picture cant be uplouded now and get be get through context processor anywhere in the templates

--- a/lazylaundry/templates/app/main.html
+++ b/lazylaundry/templates/app/main.html
@@ -187,7 +187,7 @@
                     <div class="dropdown d-inline-block ml-2">
                         <button type="button" class="btn header-item waves-effect" id="page-header-user-dropdown"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <img class="rounded-circle header-profile-user" src="{% static 'app/images/users/avatar-3.jpg' %}"
+                            <img class="rounded-circle header-profile-user" src="{{ user_get.profile_pic.url }}"
                                 alt="Header Avatar">
                             <span class="d-none d-sm-inline-block ml-1">{{request.user.first_name}}</span>
                             <i class="mdi mdi-chevron-down d-none d-sm-inline-block"></i>
