--- a/lazylaundry/templates/accounts/user-profile.html
+++ b/lazylaundry/templates/accounts/user-profile.html
@@ -8,7 +8,7 @@
             <div class="card">
                 <div class="card-body">
                     <div class="d-flex flex-column align-items-center text-center">
-                        <img src="{% static 'app/media/profile/khalid.png' %}" alt="Admin" class="rounded-circle p-1 bg-primary" width="110">
+                        <img src="{{user.profile_pic.url}}" alt="Admin" class="rounded-circle p-1 bg-primary" width="110">
                         <div class="mt-3">
                             <h4>{{user.first_name | title}}  {% if user.last_nam %} {{user.last_name | title}} {% endif %}</h4>
                             <p class="text-secondary mb-1">Username : @{{user.username}}</p>
@@ -67,7 +67,7 @@
                 <div class="modal-body">
                     <div class="text-center">
                         <label for="profile_picture">
-                            <img id="preview_image" src="{% static 'app/media/profile/khalid.png' %}" alt="Admin" class="rounded-circle p-1 bg-primary" width="80">
+                            <img id="preview_image" src="{{user.profile_pic.url}}" alt="Admin" class="rounded-circle p-1 bg-primary" width="80">
                             <p class="mt-2">Click to Change Profile</p>
                         </label>
                         <input type="file" class="form-control-file" name="profile_image" id="profile_picture" style="display:none;" onchange="previewImage(this);">
